# mfboTrajectory

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  run_docker.sh  run_mfbo_polytopes.py  run_mfbo_polytopes_robot.py  run_mfbo_polytopes_robot_tune.py  run_mfbo_waypoints.py  run_mfbo_waypoints_robot.py  run_mfbo_waypoints_robot_tune.py  setup.py
constraints_data/: poly_decomp.yaml  polytopes_constraints.yaml  waypoints_constraints.yaml
libs/pyMulticopterDynamicsSim/: pyMulticopterDynamicsSim.cpp
mfboTrajectory/: __init__.py  agents.py  minSnapTrajectoryPolytopes.py  minSnapTrajectoryWaypoints.py  models.py  multiFidelityModelPolytopes.py  multiFidelityModelWaypoints.py  trajSampler.py  utils.py  utilsConvexDecomp.py
notebooks/: mfbo_initialization_polytopes.ipynb  mfbo_initialization_waypoints.ipynb  simulation_controller.ipynb
pyMulticopterSim/config/: SimulationClient.yaml  multicopterDynamicsSim.yaml
pyMulticopterSim/simulation/: __init__.py  controller.py  env.py  filter.py  model.py  utils.py
pyTrajectoryUtils/config/: multicopter_model.yaml
pyTrajectoryUtils/pyTrajectoryUtils/: PIDcontroller.py  __init__.py  minSnapTrajectory.py  quadModel.py  trajectorySimulation.py  utils.py
setup_venv/: requirements.txt  setup.bash
